# psnTUI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
psntui/: auth.py  cli.py  db.py  sync.py
psntui/tui/: app.py  app.tcss  theme.py
psntui/tui/screens/: auth.py  calendar_screen.py  friends_screen.py  game_detail.py  main.py  theme_screen.py
systemd/: install.sh  psntui-sync.service  psntui-sync.timer
tests/: test_db.py  test_layout.py
