[project]
name = "psntui"
version = "0.1.5"
readme = "README.md"
description = "PSN Trophy Tracker TUI — sync and browse your PlayStation trophies from the terminal"
authors = [
    {name = "TripShuti"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "psnawp>=3.0",
    "textual>=2.0",
    "platformdirs>=4.0",
]

[project.scripts]
psntui = "psntui.cli:main"

[tool.setuptools.packages.find]
include = ["psntui*"]

[tool.setuptools.package-data]
psntui = ["tui/*.tcss"]

[project.urls]
Homepage = "https://github.com/TripShuti/psnTUI"
Repository = "https://github.com/TripShuti/psnTUI"
